--- a/OTManagement/app/src/main/res/layout/inventory_list_item.xml
+++ b/OTManagement/app/src/main/res/layout/inventory_list_item.xml
@@ -31,7 +31,7 @@
         android:id="@+id/textView17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="재고 수"
+        android:text="재고"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView16" />
