--- a/OTManagement/app/src/main/res/layout/activity_login.xml
+++ b/OTManagement/app/src/main/res/layout/activity_login.xml
@@ -75,6 +75,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="172dp"
             android:text="OT컴퓨터"
+            android:textStyle="bold"
             android:textSize="40sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
