--- a/OTManagement/app/src/main/res/layout/activity_main.xml
+++ b/OTManagement/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="지역별 물품 재고"
+            android:textStyle="bold"
             android:textSize="16sp"
             android:translationY="170dp"
             app:layout_constraintEnd_toEndOf="parent"
