--- a/OTManagement/app/src/main/res/layout/inventory_list_item.xml
+++ b/OTManagement/app/src/main/res/layout/inventory_list_item.xml
@@ -31,8 +31,10 @@
         android:id="@+id/textView17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="1dp"
         android:text="재고"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
