--- a/OTManagement/app/src/main/res/values/colors.xml
+++ b/OTManagement/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="gray_200">#FFA8C0CE</color>
+    <color name="gray_500">#FF6593A6</color>
+    <color name="gray_700">#FF003F63</color>
 </resources>
