--- a/OTManagement/app/src/main/res/layout/activity_splash.xml
+++ b/OTManagement/app/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#B6B6B6"
+    android:background="#A8C0CE"
     tools:context=".Splash">
 
     <ImageView
